--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keyword" content="calculator, simple calculator">
-    <meta name="description" content="This is a simple calculator for performing simple arithmatic operation like addition, subtraction etc">
+    <meta name="description" content="This is a simple calculator for performing simple arithmatic operation like addition, subtraction etc.">
     <meta name="author" content="Tonmoy Biswas">
     <title>Calculator</title>
     <link rel="stylesheet" tyep="text/css" href="style.css">
