--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
     <div id="calculator">
         <div id="expression"  class="display">expression1</div>
         <div id="ans" class="display">ans1</div>
-        <div id="ac" class="key">AC</div>
-        <div id="percentage" class="key">%</div>
-        <div id="backspace" class="key"><</div>
-        <div id="division" class="key">/</div>
-        <div id="seven" class="key">7</div>
-        <div id="eight" class="key">8</div>
-        <div id="nine" class="key">9</div>
-        <div id="multiply" class="key">*</div>
-        <div id="four" class="key">4</div>
-        <div id="five" class="key">5</div>
-        <div id="six" class="key">6</div>
-        <div id="subtraction" class="key">-</div>
-        <div id="one" class="key">1</div>
-        <div id="two" class="key">2</div>
-        <div id="three" class="key">3</div>
-        <div id="addition" class="key">+</div>
-        <div id="point" class="key">.</div>
-        <div id="zero" class="key">0</div>
-        <div id="exponent" class="key">^</div>
-        <div id="submit" class="key">=</div>
+        <div id="ac" class="key" data-value="ac" data-index="0">AC</div>
+        <div id="percentage" class="key" data-value="%" data-index="1">%</div>
+        <div id="backspace" class="key" data-value="cancel" data-index="2">&lt;</div>
+        <div id="division" class="key" data-value="/" data-index="3">/</div>
+        <div id="seven" class="key" data-value="7" data-index="4">7</div>
+        <div id="eight" class="key" data-value="8" data-index="5">8</div>
+        <div id="nine" class="key" data-value="9" data-index="6">9</div>
+        <div id="multiply" class="key" data-value="*" data-index="7">*</div>
+        <div id="four" class="key" data-value="4" data-index="8">4</div>
+        <div id="five" class="key" data-value="5" data-index="9">5</div>
+        <div id="six" class="key" data-value="6" data-index="10">6</div>
+        <div id="subtraction" class="key" data-value="-" data-index="11">-</div>
+        <div id="one" class="key" data-value="1" data-index="12">1</div>
+        <div id="two" class="key" data-value="2" data-index="13">2</div>
+        <div id="three" class="key" data-value="3" data-index="14">3</div>
+        <div id="addition" class="key" data-value="+" data-index="15">+</div>
+        <div id="point" class="key" data-value="." data-index="16">.</div>
+        <div id="zero" class="key" data-value="0" data-index="17">0</div>
+        <div id="exponent" class="key" data-value="**" data-index="18">^</div>
+        <div id="submit" class="key" data-value="=" data-index="19">=</div>
     </div>
 
 
