bug of submit button fixed

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     
     <div id="calculator">
-        <div id="expression"  class="display">expression1</div>
-        <div id="ans" class="display">ans1</div>
+        <div id="expression"  class="display">expression</div>
+        <div id="ans" class="display">ans</div>
         <div id="ac" class="key" data-value="ac" data-index="0">AC</div>
         <div id="percentage" class="key" data-value="%" data-index="1">%</div>
         <div id="backspace" class="key" data-value="cancel" data-index="2">&lt;</div>
